import css , js files

--- a/src/template/planning.html
+++ b/src/template/planning.html
@@ -6,10 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="../assets/index.css">
   <title>Document</title>
 </head>
-
 
 <body>
 <div>
@@ -69,68 +68,27 @@
     <main class="app-content">
       <div class="app-page">
 
+
 <div>
   <div class="page-title">
-    <h3>Новая запись</h3>
+    <h3>Планирование</h3>
+    <h4>12 212</h4>
   </div>
 
-  <form class="form">
-    <div class="input-field" >
-      <select>
-        <option
-        >name cat</option>
-      </select>
-      <label>Выберите категорию</label>
+  <section>
+    <div>
+      <p>
+        <strong>Девушка:</strong>
+        12 122 из 14 0000
+      </p>
+      <div class="progress" >
+        <div
+            class="determinate green"
+            style="width:40%"
+        ></div>
+      </div>
     </div>
-
-    <p>
-      <label>
-        <input
-            class="with-gap"
-            name="type"
-            type="radio"
-            value="income"
-        />
-        <span>Доход</span>
-      </label>
-    </p>
-
-    <p>
-      <label>
-        <input
-            class="with-gap"
-            name="type"
-            type="radio"
-            value="outcome"
-        />
-        <span>Расход</span>
-      </label>
-    </p>
-
-    <div class="input-field">
-      <input
-          id="amount"
-          type="number"
-      >
-      <label for="amount">Сумма</label>
-      <span class="helper-text invalid">amount пароль</span>
-    </div>
-
-    <div class="input-field">
-      <input
-          id="description"
-          type="text"
-      >
-      <label for="description">Описание</label>
-      <span
-            class="helper-text invalid">description пароль</span>
-    </div>
-
-    <button class="btn waves-effect waves-light" type="submit">
-      Создать
-      <i class="material-icons right">send</i>
-    </button>
-  </form>
+  </section>
 </div>
 
 </div>
@@ -147,4 +105,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
+
 
