--- a/src/template/detail-record.html
+++ b/src/template/detail-record.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="../assets/index.css">
   <title>Document</title>
 </head>
-
 
 <body>
 <div>
@@ -26,11 +24,7 @@
 
         <ul class="right hide-on-small-and-down">
           <li>
-            <a
-                class="dropdown-trigger black-text"
-                href="#"
-                data-target="dropdown"
-            >
+            <a class="dropdown-trigger black-text" href="#" data-target="dropdown">
               USER NAME
               <i class="material-icons right">arrow_drop_down</i>
             </a>
@@ -74,56 +68,31 @@
     <main class="app-content">
       <div class="app-page">
 
+
 <div>
-  <div class="page-title">
-    <h3>Счет</h3>
-
-    <button class="btn waves-effect waves-light btn-small">
-      <i class="material-icons">refresh</i>
-    </button>
-  </div>
-
-  <div class="row">
-    <div class="col s12 m6 l4">
-      <div class="card light-blue bill-card">
-        <div class="card-content white-text">
-          <span class="card-title">Счет в валюте</span>
-
-          <p class="currency-line">
-            <span>12.0 Р</span>
-          </p>
-        </div>
-      </div>
+  <div>
+    <div class="breadcrumb-wrap">
+      <a href="/history" class="breadcrumb">История</a>
+      <a class="breadcrumb">
+        Расход
+      </a>
     </div>
+    <div class="row">
+      <div class="col s12 m6">
+        <div class="card red">
+          <div class="card-content white-text">
+            <p>Описание:</p>
+            <p>Сумма:</p>
+            <p>Категория:</p>
 
-    <div class="col s12 m6 l8">
-      <div class="card orange darken-3 bill-card">
-        <div class="card-content white-text">
-          <div class="card-header">
-            <span class="card-title">Курс валют</span>
+            <small>12.12.12</small>
           </div>
-          <table>
-            <thead>
-            <tr>
-              <th>Валюта</th>
-              <th>Курс</th>
-              <th>Дата</th>
-            </tr>
-            </thead>
-
-            <tbody>
-            <tr>
-              <td>руб</td>
-              <td>12121</td>
-              <td>12.12.12</td>
-            </tr>
-            </tbody>
-          </table>
         </div>
       </div>
     </div>
   </div>
 </div>
+
 
 </div>
 </main>
