--- a/src/template/home.html
+++ b/src/template/home.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="../assets/index.css">
   <title>Document</title>
 </head>
+
 
 <body>
 <div>
@@ -24,7 +26,11 @@
 
         <ul class="right hide-on-small-and-down">
           <li>
-            <a class="dropdown-trigger black-text" href="#" data-target="dropdown">
+            <a
+                class="dropdown-trigger black-text"
+                href="#"
+                data-target="dropdown"
+            >
               USER NAME
               <i class="material-icons right">arrow_drop_down</i>
             </a>
@@ -70,71 +76,53 @@
 
 <div>
   <div class="page-title">
-    <h3>Категории</h3>
+    <h3>Счет</h3>
+
+    <button class="btn waves-effect waves-light btn-small">
+      <i class="material-icons">refresh</i>
+    </button>
   </div>
-  <section>
-    <div class="row">
-      <div class="col s12 m6">
-        <div>
-          <div class="page-subtitle">
-            <h4>Создать</h4>
-          </div>
 
-          <form>
-            <div class="input-field">
-              <input id="name" type="text">
-              <label for="name">Название</label>
-              <span class="helper-text invalid">Введите название</span>
-            </div>
+  <div class="row">
+    <div class="col s12 m6 l4">
+      <div class="card light-blue bill-card">
+        <div class="card-content white-text">
+          <span class="card-title">Счет в валюте</span>
 
-            <div class="input-field">
-              <input id="limit" type="number">
-              <label for="limit">Лимит</label>
-              <span class="helper-text invalid">Минимальная величина</span>
-            </div>
-
-            <button class="btn waves-effect waves-light" type="submit">
-              Создать
-              <i class="material-icons right">send</i>
-            </button>
-          </form>
-        </div>
-      </div>
-      <div class="col s12 m6">
-        <div>
-          <div class="page-subtitle">
-            <h4>Редактировать</h4>
-          </div>
-
-          <form>
-            <div class="input-field" >
-              <select>
-                <option>Category</option>
-              </select>
-              <label>Выберите категорию</label>
-            </div>
-
-            <div class="input-field">
-              <input type="text" id="name">
-              <label for="name">Название</label>
-              <span class="helper-text invalid">TITLE</span>
-            </div>
-
-            <div class="input-field">
-              <input id="limit" type="number">
-              <label for="limit">Лимит</label>
-              <span class="helper-text invalid">LIMIT</span>
-            </div>
-
-            <button class="btn waves-effect waves-light" type="submit">
-              Обновить
-              <i class="material-icons right">send</i>
-            </button>
-          </form>
+          <p class="currency-line">
+            <span>12.0 Р</span>
+          </p>
         </div>
       </div>
     </div>
-  </section>
+
+    <div class="col s12 m6 l8">
+      <div class="card orange darken-3 bill-card">
+        <div class="card-content white-text">
+          <div class="card-header">
+            <span class="card-title">Курс валют</span>
+          </div>
+          <table>
+            <thead>
+            <tr>
+              <th>Валюта</th>
+              <th>Курс</th>
+              <th>Дата</th>
+            </tr>
+            </thead>
+
+            <tbody>
+            <tr>
+              <td>руб</td>
+              <td>12121</td>
+              <td>12.12.12</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 </div>
