--- a/src/template/profile.html
+++ b/src/template/profile.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="../assets/index.css">
   <title>Document</title>
 </head>
 
@@ -68,31 +68,28 @@
     <main class="app-content">
       <div class="app-page">
 
-
 <div>
-  <div>
-    <div class="breadcrumb-wrap">
-      <a href="/history" class="breadcrumb">История</a>
-      <a class="breadcrumb">
-        Расход
-      </a>
-    </div>
-    <div class="row">
-      <div class="col s12 m6">
-        <div class="card red">
-          <div class="card-content white-text">
-            <p>Описание:</p>
-            <p>Сумма:</p>
-            <p>Категория:</p>
-
-            <small>12.12.12</small>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="page-title">
+    <h3>Профиль</h3>
   </div>
-</div>
 
+  <form class="form">
+    <div class="input-field">
+      <input
+          id="description"
+          type="text"
+      >
+      <label for="description">Имя</label>
+      <span
+            class="helper-text invalid">name</span>
+    </div>
+
+    <button class="btn waves-effect waves-light" type="submit">
+      Обновить
+      <i class="material-icons right">send</i>
+    </button>
+  </form>
+</div>
 
 </div>
 </main>
