--- a/src/template/record.html
+++ b/src/template/record.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="../assets/index.css">
   <title>Document</title>
 </head>
+
 
 <body>
 <div>
@@ -68,57 +69,79 @@
     <main class="app-content">
       <div class="app-page">
 
-        <div>
-          <div class="page-title">
-            <h3>История записей</h3>
-          </div>
-
-          <div class="history-chart">
-            <canvas></canvas>
-          </div>
-
-          <section>
-            <table>
-              <thead>
-              <tr>
-                <th>#</th>
-                <th>Сумма</th>
-                <th>Дата</th>
-                <th>Категория</th>
-                <th>Тип</th>
-                <th>Открыть</th>
-              </tr>
-              </thead>
-
-              <tbody>
-              <tr>
-                <td>1</td>
-                <td>1212</td>
-                <td>12.12.32</td>
-                <td>name</td>
-                <td>
-                  <span class="white-text badge red">Расход</span>
-                </td>
-                <td>
-                  <button class="btn-small btn">
-                    <i class="material-icons">open_in_new</i>
-                  </button>
-                </td>
-              </tr>
-              </tbody>
-            </table>
-          </section>
-        </div>
-
-       </div>
-    </main>
-
-    <div class="fixed-action-btn">
-      <a class="btn-floating btn-large blue" href="#">
-        <i class="large material-icons">add</i>
-      </a>
-    </div>
+<div>
+  <div class="page-title">
+    <h3>Новая запись</h3>
   </div>
+
+  <form class="form">
+    <div class="input-field" >
+      <select>
+        <option
+        >name cat</option>
+      </select>
+      <label>Выберите категорию</label>
+    </div>
+
+    <p>
+      <label>
+        <input
+            class="with-gap"
+            name="type"
+            type="radio"
+            value="income"
+        />
+        <span>Доход</span>
+      </label>
+    </p>
+
+    <p>
+      <label>
+        <input
+            class="with-gap"
+            name="type"
+            type="radio"
+            value="outcome"
+        />
+        <span>Расход</span>
+      </label>
+    </p>
+
+    <div class="input-field">
+      <input
+          id="amount"
+          type="number"
+      >
+      <label for="amount">Сумма</label>
+      <span class="helper-text invalid">amount пароль</span>
+    </div>
+
+    <div class="input-field">
+      <input
+          id="description"
+          type="text"
+      >
+      <label for="description">Описание</label>
+      <span
+            class="helper-text invalid">description пароль</span>
+    </div>
+
+    <button class="btn waves-effect waves-light" type="submit">
+      Создать
+      <i class="material-icons right">send</i>
+    </button>
+  </form>
+</div>
+
+</div>
+</main>
+
+<div class="fixed-action-btn">
+  <a class="btn-floating btn-large blue" href="#">
+    <i class="large material-icons">add</i>
+  </a>
+</div>
+</div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
